# A3

./: README.md  pyproject.toml  requirements.txt
ace/evaluators/: Claude_eval.py  GPT_eval.py  Gemini_eval.py  __init__.py  static_evaluator.py
ace/task_eval/: get_all_tasks.py
ace/task_eval/CNN/: task0.py  task1.py  task2.py  task3.py  task4.py  task5.py
ace/task_eval/Gmail/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
ace/task_eval/GooglePlayBooks/: pretask.py  task0.py  task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
ace/task_eval/GoogleTasks/: pretask.py  task0.py  task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
ace/task_eval/YTmusic/: task1.py  task10.py  task11.py  task12.py  task13.py  task14.py  task15.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
ace/task_eval/bluecoins/: task0.py  task1.py  task10.py  task11.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
ace/task_eval/booking/: task0.py  task1.py  task10.py  task11.py  task12.py  task2.py  task3.py  task4.py  task5.py  (+4 more)
ace/translator/: base.py  ui_tars.py
ace/utils/: avd_control.py  common_utils.py  essential_states.py  register.py  screenshot_ocr.py  xml_cleaner.py  xml_parser.py
config/: control_config.yaml  eval_config.yaml  human_anno_essential_states_config.yaml
docs/: agents.md  environment_setup.md  tasks.md
script/: control.py  eval.py  print_func_results.py  print_llm_results.py
(+121 files in other folders)
