[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ace"
dynamic = ["version"]
description = "A package to control Android Virtual Device and evaluate task completion"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Yuxiang Chai" },
]

[project.urls]
Homepage = "https://github.com/YuxiangChai/A3"

[tool.hatch.version]
path = "ace/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ace",
]
